Revision history for Catalyst-Plugin-Statsd.

{{$NEXT}}

v0.6.3    2019-07-17 17:43:18+01:00 Europe/London
  [Documentation]
  - Fixed minor POD typo.

v0.6.2    2019-07-14 14:37:43+01:00 Europe/London
  [Documentation]
  - Adjusted case of ABSTRACT.

  - Added missing import to SYNOPSIS.

  - Added Net::Statsd::Tiny to SEE ALSO.

  - Added info about the statsd_client method.

v0.6.1    2019-06-01 14:34:40+01:00 Europe/London
  [Documentation]
  - Fixed typo.

v0.6.0    2019-06-01 09:58:43+01:00 Europe/London
  [Bug Fixes]
  - Hyphens in metric names are no longer escaped to dots.

    This could be considered an Incompatible Change if you were relying
    in this behaviour.

  [Documentation]
  - Added more information abou statsd_metric_name_filter method.

  [Tests]
  - Added tests for profiling.

v0.5.1    2019-05-28 12:45:40+01:00 Europe/London
  [Documentation]
  - Documented known issue with custom profiling points.

  - Bumped copyright year.

v0.5.0    2018-12-03 17:39:30+00:00 Europe/London
  [Enhancements]
  - disable_stats_report default is based on !$c->debug.

  [Documentation]
  - Added more documentation about the metrics.

v0.4.2    2018-11-30 15:58:08+00:00 Europe/London
  [Tests]
  - Fixed tests to allow missing log output name.

  - Added diagnostics.

v0.4.1    2018-11-29 23:16:52+00:00 Europe/London
  [Tests]
  - Require Term::Size::Any so that Catalyst logging works on some
    systems, #1.

v0.4.0    2018-11-29 18:59:35+00:00 Europe/London
  [Incompatabilities]
  - Catalyst v5.90123 is now required.

  - Perl v5.10.1 or newer is required.

  [Enhancements]
  - This modifies the log_stats method, and the stats report table can
    be disabled.

v0.3.0    2018-10-26 16:58:25+01:00 Europe/London
  [Enhancements]
  - Added the statsd_client method.

  [Documentation]
  - Added INSTALL file to the distribution.

  [Toolchain]
  - Tweaks to dist.ini for simplifying build.

  [Other]
  - Remove cruft from distribution.
