@@ -1,6 +1,8 @@
 Revision history for Catalyst-Plugin-Statsd.
 
 {{$NEXT}}
+  [Enhancements]
+  - Logs the sessionid for counting unique sessions, #4
 
 v0.6.3    2019-07-17 17:43:18+01:00 Europe/London
   [Documentation]
